--- a/config/config.json
+++ b/config/config.json
@@ -9,14 +9,14 @@
   "test": {
     "username": "postgres",
     "password": "postgres",
-    "database": "scheduling_system_test",
+    "database": "scheduling_system",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
     "password": "postgres",
-    "database": "scheduling_system_production",
+    "database": "scheduling_system",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
